# glasgow_calibration

calibration_glasgow/: CMakeLists.txt  camera2rb.calib  readProgram.md
calibration_glasgow/calibrations/: cam_to_target.xml  gripper2target.xml  robotBase_to_gripper_.xml  robot_poses.py
calibration_glasgow/include/calibration_glasgow/: calibration_services.h  camera_calibration.h  handeye_calibration.h  kinect2_definitions.h  parameters.h
calibration_glasgow/launch/: baxter_handeye_calibration.launch
calibration_glasgow/src/: broadcast.cpp  calibration_services.cpp  camera_calibration.cpp  getPose.cpp  handeye_calib_call.cpp  handeye_calibration.cpp  listener.cpp  record_joint.cpp  robot_helper.cpp
calibration_glasgow/srv/: TargetProcess.srv
